force-app/main/default/objects/Case/fields/Support_Programs__c.field-meta.xml
<CustomField>
    <fullName>Support_Programs__c</fullName>
    <label>Support Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECI - Better Tomorrows</fullName>
            </value>
            <value>
                <fullName>ECI - Better Beginnings online</fullName>
            </value>
            <value>
                <fullName>ECI - Better Beginnings in-person events</fullName>
            </value>
            <value>
                <fullName>ECI - Better Beginnings individual therapy</fullName>
            </value>
            <value>
                <fullName>ECI - Better Starts online</fullName>
            </value>
            <value>
                <fullName>ECI - Better Starts in-person events</fullName>
            </value>
            <value>
                <fullName>ECI</fullName>
            </value>
            <value>
                <fullName>Mental Health (Psychology or counselling services)</fullName>
            </value>
            <value>
                <fullName>Peer Mentor Support</fullName>
            </value>
            <value>
                <fullName>Tuition Support (Missing schools, RMHC School Tutoring etc)</fullName>
            </value>
            <value>
                <fullName>NDIS services:  OT, Speech pathologist, Physio Therapy etc.</fullName>
            </value>
            <value>
                <fullName>Lego Therapy</fullName>
            </value>
            <value>
                <fullName>Lego Play session</fullName>
            </value>
            <value>
                <fullName>Online school holiday activities</fullName>
            </value>
            <value>
                <fullName>Little YACs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>