force-app/main/default/objects/Case/fields/Support_Setting__c.field-meta.xml
<CustomField>
    <fullName>Support_Setting__c</fullName>
    <description>This is where the support takes place. In Hospital support means the child/family have been admitted. All other support is In Community</description>
    <inlineHelpText>This is where the support takes place. In Hospital support means the child/family have been admitted. All other support is In Community</inlineHelpText>
    <label>Support Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Support_Setting</valueSetName>
    </valueSet>
</CustomField>