force-app/main/default/objects/Case/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <formula>TEXT(FLOOR( Total_Time_Spent__c )) + &apos; Hours &apos; + &apos; and &apos; + 
TEXT( FLOOR( ( ROUND(Total_Time_Spent__c ,2)-FLOOR(Total_Time_Spent__c ) ) * 60 ) ) + &apos; Minutes&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time Spent</label>
    <type>Text</type>
</CustomField>