force-app/main/default/objects/Case/fields/Total_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Spent__c</fullName>
    <label>Time Spent</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>