force-app/main/default/objects/Case/fields/Total_Time_Spent_Mins__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Spent_Mins__c</fullName>
    <label>Admin Total Time Spent (Mins.)</label>
    <summarizedField>Support_Activity__c.Time_Spent_Mins__c</summarizedField>
    <summaryForeignKey>Support_Activity__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>