force-app/main/default/objects/Case/fields/Type_of_Medical_Equipment_being_Loaned_o__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Medical_Equipment_being_Loaned_o__c</fullName>
    <label>Type of Medical Equipment Loaned Out?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INR Machine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>