force-app/main/default/objects/Case/fields/Web_Aboriginal_or_Torres_Strait_Islander__c.field-meta.xml
<CustomField>
    <fullName>Web_Aboriginal_or_Torres_Strait_Islander__c</fullName>
    <description>Value will map from web to case Case created via the Helpline web form process</description>
    <label>Web Aboriginal or Torres Strait Islander</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aboriginal_Torres_Strait_Islander_Origin</valueSetName>
    </valueSet>
</CustomField>