force-app/main/default/objects/Case/fields/Web_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Web_Birthdate__c</fullName>
    <description>Value will map from web to case Case created via the Helpline web form process</description>
    <label>Web Birthdate</label>
    <type>Date</type>
</CustomField>