force-app/main/default/objects/Case/fields/Web_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Web_Mobile__c</fullName>
    <label>Web Mobile</label>
    <type>Phone</type>
</CustomField>