force-app/main/default/objects/Case/fields/Web_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Web_Postcode__c</fullName>
    <description>Value will map from web to case Case created via the Helpline web form process</description>
    <label>Web Postcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>