force-app/main/default/objects/Case/fields/Web_Professional_Connection_to_CHD__c.field-meta.xml
<CustomField>
    <fullName>Web_Professional_Connection_to_CHD__c</fullName>
    <label>Web Professional Connection to CHD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Partner/Contact</fullName>
            </value>
            <value>
                <fullName>Health Professional</fullName>
            </value>
            <value>
                <fullName>Hospital Administration</fullName>
            </value>
            <value>
                <fullName>Hospital PR</fullName>
            </value>
            <value>
                <fullName>Media Contact</fullName>
            </value>
            <value>
                <fullName>Researcher</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>