force-app/main/default/objects/Case/fields/Web_Type_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Web_Type_of_Contact__c</fullName>
    <description>Value will map from web to case Case created via the Helpline web form process</description>
    <label>Web Type of Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>