force-app/main/default/objects/Case/fields/Web_Type_of_Support__c.field-meta.xml
<CustomField>
    <fullName>Web_Type_of_Support__c</fullName>
    <description>Value will map from web to case Case created via the Helpline web form process</description>
    <label>Web Type of Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teen</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Antenatal</fullName>
            </value>
            <value>
                <fullName>Early Childhood</fullName>
            </value>
            <value>
                <fullName>Parental</fullName>
            </value>
            <value>
                <fullName>Resources</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unrelated to support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>