force-app/main/default/objects/Case/fields/Web_Type_of_Support_Other__c.field-meta.xml
<CustomField>
    <fullName>Web_Type_of_Support_Other__c</fullName>
    <description>Value will map from web to case Case created via the Helpline web form process</description>
    <label>Web Type of Support Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>