force-app/main/default/objects/Case/recordTypes/ECIP_Program.recordType-meta.xml
<RecordType>
    <fullName>ECIP_Program</fullName>
    <active>true</active>
    <businessProcess>Generic Support Process</businessProcess>
    <label>ECIP Program</label>
</RecordType>