force-app/main/default/objects/Case/recordTypes/In_Community.recordType-meta.xml
<RecordType>
    <fullName>In_Community</fullName>
    <active>false</active>
    <businessProcess>Generic Support Process</businessProcess>
    <label>In Community</label>
</RecordType>