force-app/main/default/objects/Case/recordTypes/In_hospital.recordType-meta.xml
<RecordType>
    <fullName>In_hospital</fullName>
    <active>false</active>
    <businessProcess>Generic Support Process</businessProcess>
    <label>In hospital</label>
</RecordType>