force-app/main/default/objects/Case/listViews/Cases_Created_Today.listView-meta.xml
<ListView>
    <fullName>Cases_Created_Today</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Cases Created Today</label>
</ListView>