force-app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Helpline_Theme_of_Support__c</columns>
    <columns>HK_Resources_Offered__c</columns>
    <columns>HK_Resources_Provided__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>7/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>1/1/2025 12:00 AM</value>
    </filters>
    <label>My Cases</label>
</ListView>