force-app/main/default/objects/Case/listViews/No_case_contact_in_12_months.listView-meta.xml
<ListView>
    <fullName>No_case_contact_in_12_months</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED_DATE</field>
        <operation>greaterThan</operation>
        <value>7/1/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.CLOSED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>6/30/2024 12:00 AM</value>
    </filters>
    <label>No case contact in 12 months</label>
</ListView>