force-app/main/default/objects/Case/listViews/Web_form_Support_Cases_NSW.listView-meta.xml
<ListView>
    <fullName>Web_form_Support_Cases_NSW</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.NAME</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Web_Mailing_State__c</columns>
    <columns>Web_Postcode__c</columns>
    <columns>Web_Type_of_Contact__c</columns>
    <columns>Web_Type_of_Support__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Web form - Helpline form</value>
    </filters>
    <filters>
        <field>Web_Mailing_State__c</field>
        <operation>equals</operation>
        <value>NSW</value>
    </filters>
    <label>Web form Support Cases_NSW</label>
</ListView>