force-app/main/default/objects/Case/listViews/Webform_Cases.listView-meta.xml
<ListView>
    <fullName>Webform_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Web form - Helpline form</value>
    </filters>
    <label>Webform Cases</label>
</ListView>